ops/k8s/deployments/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: data-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      component: data-repo-api
  template:
    metadata:
      labels:
        app: data-repo
        component: data-repo-api
    spec:
      serviceAccountName: jade-sa
      volumes:
      - name: google-cloud-key
        secret:
          secretName: sa-key
      containers:
      - name: data-repo-api-container
        image: gcr.io/broad-jade-dev/jade-data-repo:latest
        readinessProbe:
          httpGet:
            path: /status
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /status
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 2
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        ports:
        - containerPort: 8080
        - containerPort: 5005
