ops/k8s/deployments/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      service: grafana
  template:
    metadata:
      labels:
        service: grafana
    spec:
      serviceAccountName: jade-sa
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 30
          failureThreshold: 10
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana/provisioning/datasources/stackdriver.yaml
          name: "grafana-config-stackdriverdatasource"
          subPath: stackdriver.yaml
        - mountPath: /etc/grafana/provisioning/datasources/prometheus.yaml
          name: "grafana-config-prometheusdatasource"
          subPath: prometheus.yaml
        - mountPath: /etc/grafana/provisioning/dashboards
          name: "grafana-config-dashboards"
        - mountPath: /var/lib/grafana/dashboards/k8sdashboard
          name: "grafana-config-k8sdashboard"
        - mountPath: /var/lib/grafana/dashboards/loadbalancerdashboard
          name: "grafana-config-loadbalancerdashboard"
        - mountPath: /var/lib/grafana/dashboards/cloud-sql-dashboard
          name: "grafana-config-cloud-sql-dashboard"
        - mountPath: /var/lib/grafana/dashboards/k8sprometheus
          name: "grafana-config-k8sprometheus"
        - mountPath: /var/lib/grafana/dashboards/cloudstorage-dashboard
          name: "grafana-config-cloudstorage-dashboard"
        - mountPath: /var/lib/grafana/dashboards/bigquery-logs
          name: "grafana-config-bigquery-logs"
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: "grafana-config-stackdriverdatasource"
        configMap:
          name: "grafana-config"
          items:
            - key: stackdriverdatasource
              path: stackdriver.yaml
      - name: "grafana-config-prometheusdatasource"
        configMap:
          name: "grafana-config"
          items:
            - key: prometheusdatasource
              path: prometheus.yaml
      - name: "grafana-config-dashboards"
        configMap:
          name: "grafana-config"
          items:
            - key: dashboards
              path: dashboards.yaml
      - name: "grafana-config-k8sdashboard"
        configMap:
          name: "grafana-config"
          items:
            - key: k8sdashboard
              path: k8sdashboard.json
      - name: "grafana-config-loadbalancerdashboard"
        configMap:
          name: "grafana-config"
          items:
            - key: loadbalancerdashboard
              path: loadbalancerdashboard.json
      - name: "grafana-config-cloud-sql-dashboard"
        configMap:
          name: "grafana-config"
          items:
            - key: cloud-sql-dashboard
              path: cloud-sql-dashboard.json
      - name: "grafana-config-k8sprometheus"
        configMap:
          name: "grafana-config"
          items:
            - key: k8sprometheus
              path: k8sprometheus.json
      - name: "grafana-config-cloudstorage-dashboard"
        configMap:
          name: "grafana-config"
          items:
            - key: cloudstorage-dashboard
              path: cloudstorage-dashboard.json
      - name: "grafana-config-bigquery-logs"
        configMap:
          name: "grafana-config"
          items:
            - key: bigquery-logs
              path: bigquery-logs.json
