ops/k8s/deployments/oidc-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-proxy-deployment
  namespace: data-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      component: data-repo-oidc-proxy
  template:
    metadata:
      labels:
        app: data-repo
        component: data-repo-oidc-proxy
    spec:
      serviceAccountName: jade-sa
      containers:
      - name: oidc-proxy-container
        # Based on the latest security review this is the recommended version of the proxy to use.
        image: broadinstitute/openidc-proxy:bernick_tcell
        readinessProbe:
          httpGet:
            path: /status
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 10
          failureThreshold: 3
