ops/k8s/deployments/node-exporter.yaml
apiVersion: apps/v1beta2
kind: DaemonSet
metadata:
    labels:
        app: node-exporter
    name: node-exporter
spec:
    selector:
        matchLabels:
            app: node-exporter
    template:
        metadata:
            labels:
                app: node-exporter
        spec:
            containers:
                - args:
                      - --web.listen-address=0.0.0.0:9101
                      - --path.procfs=/host/proc
                      - --path.sysfs=/host/sys
                  image: quay.io/prometheus/node-exporter:v0.15.2
                  name: node-exporter
                  ports:
                      - name: metrics
                        containerPort: 9101
                  resources:
                      limits:
                          cpu: 102m
                          memory: 180Mi
                      requests:
                          cpu: 102m
                          memory: 180Mi
                  volumeMounts:
                      - mountPath: /host/proc
                        name: proc
                        readOnly: false
                      - mountPath: /host/sys
                        name: sys
                        readOnly: false
            hostNetwork: true
            hostPID: true
            securityContext:
                runAsNonRoot: true
                runAsUser: 65534
            volumes:
                - hostPath:
                      path: /proc
                  name: proc
                - hostPath:
                      path: /sys
                  name: sys
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: node-exporter
    annotations:
        a: b
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9101'
    name: node-exporter
spec:
    clusterIP: None
    ports:
        - name: web
          port: 9101
    selector:
        app: node-exporter
