ops/k8s/deployments/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-outbound
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      service: oidc
      environment: integration
      project: datarepo
  egress:
  - {}
  policyTypes:
  - Egress
